add: bench tests, readme, deactivate users handler
